# generic-web-project

./: .gitignore  Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/frontend/: Cargo.toml
